--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.12",
+    "@emotion/css": "^11.10.8",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.128",
+    "@mui/material": "^5.12.2",
+    "@mui/x-data-grid": "^6.3.0",
+    "@mui/x-data-grid-generator": "^6.3.0",
+    "@mui/x-data-grid-pro": "^6.3.0",
+    "@mui/x-date-pickers": "^6.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "notistack": "^3.0.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.1",
     "react": "^18.2.0",
@@ -21,6 +29,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-virtuoso": "^4.3.5",
     "swal": "^0.1.0",
     "sweetalert": "^2.1.2",
     "swiper": "^9.0.5",
